// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField TextField normal 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with autocomplete 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      autoComplete="email"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with disabled 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base disabled normal md medium md truncate"
      disabled={true}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with enterKeyHint 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      enterKeyHint="go"
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with error 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="true"
      className="textField base enabled errored md medium md truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="md_startPadding md_topPadding"
    id="test-error"
  >
    <div
      className="error alignStart breakWord Text fontSize100 fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="test-error"
      >
        <div
          className="box"
          role="alert"
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
          >
            <div
              className="FlexItem"
            >
              <div
                className="box"
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="error icon iconBlock"
                  height={16}
                  role="img"
                  viewBox="0 0 24 24"
                  width={16}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              error message
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`TextField TextField with hasError 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="true"
      className="textField base enabled errored md medium md truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with maxLength character counter 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      id="test"
      maxLength={20}
      name="maxLength"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="md_startPadding md_topPadding"
    id="test-helperText"
  >
    <div
      className="Flex rowGap4 columnGap4 xsDirectionRow"
    >
      <div
        className="FlexItem flexGrow"
      />
      <div
        className="FlexItem"
      >
        <div
          className="absolute box"
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <div
            className="subtle alignStart breakWord Text fontSize100 fontWeightNormal"
          >
            20/20
          </div>
        </div>
        <div
          className="Flex rowGap1 columnGap1 justifyCenter xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="box"
              style={
                Object {
                  "width": 16,
                }
              }
            />
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap0 justifyEnd xsDirectionRow"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="subtle alignEnd breakWord Text fontSize100 fontWeightNormal"
              >
                <div
                  className="box xsDisplayVisuallyHidden"
                >
                  ,
                </div>
                0/20
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`TextField TextField with name 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with readOnly 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-invalid="false"
      className="textField base enabled normal md medium md truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with tags 1`] = `
<span>
  <div
    className="box relative"
  >
    <div
      className="textField base enabled normal md medium md textFieldWrapper"
    >
      <div
        className="box marginEnd1"
        style={
          Object {
            "marginBottom": "2px",
          }
        }
      >
        <div
          aria-disabled={false}
          className="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 24,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="box marginEnd5 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <span
              className="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="a@pinterest.com"
            >
              a@pinterest.com
            </span>
            <div
              className="box"
            >
              <button
                className="closeButton default tapTransition accessibilityOutline sm"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="box justifyCenter xsDisplayFlex xsItemsCenter"
                  style={
                    Object {
                      "marginTop": "1px",
                      "width": "100%",
                    }
                  }
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove email tag"
                    className="default icon iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginEnd1"
        style={
          Object {
            "marginBottom": "2px",
          }
        }
      >
        <div
          aria-disabled={false}
          className="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 24,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="box marginEnd5 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <span
              className="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="b@pinterest.com"
            >
              b@pinterest.com
            </span>
            <div
              className="box"
            >
              <button
                className="closeButton default tapTransition accessibilityOutline sm"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="box justifyCenter xsDisplayFlex xsItemsCenter"
                  style={
                    Object {
                      "marginTop": "1px",
                      "width": "100%",
                    }
                  }
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove email tag"
                    className="default icon iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginEnd1"
        style={
          Object {
            "marginBottom": "2px",
          }
        }
      >
        <div
          aria-disabled={false}
          className="box paddingX1 paddingYundefined relative rounding1 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 24,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="box marginEnd5 xsDisplayFlex xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <span
              className="default alignStart breakAll lineClamp Text fontSize100 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 1,
                }
              }
              title="c@pinterest.com"
            >
              c@pinterest.com
            </span>
            <div
              className="box"
            >
              <button
                className="closeButton default tapTransition accessibilityOutline sm"
                onClick={[Function]}
                type="button"
              >
                <div
                  className="box justifyCenter xsDisplayFlex xsItemsCenter"
                  style={
                    Object {
                      "marginTop": "1px",
                      "width": "100%",
                    }
                  }
                >
                  <svg
                    aria-hidden={null}
                    aria-label="Remove email tag"
                    className="default icon iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box flexGrow marginEnd2 relative"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          aria-hidden={true}
          className="textFieldSpacer"
        />
        <input
          aria-invalid="false"
          className="unstyledTextField"
          disabled={false}
          id="test"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
</span>
`;
